# clawhip

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: event-contract-v1.md  geobench.md  live-verification.md  native-event-contract.md
geobench/: clawhip.yaml
src/: binding_verify.rs  cli.rs  config.rs  cron.rs  daemon.rs  discord.rs  discord_watch.rs  dispatch.rs  events.rs  gajae.rs  gateway_allowlist.rs  keyword_window.rs  main.rs  memory.rs  native_hooks.rs  native_observability.rs  router.rs  slack.rs  telemetry.rs  tmux_wrapper.rs
src/core/: circuit_breaker.rs  dlq.rs
src/event/: body.rs  compat.rs  mod.rs
src/hooks/: mod.rs  prompt_deliver.rs
src/render/: default.rs
src/sink/: local_file.rs  mod.rs
src/source/: git.rs  github.rs  tmux.rs
tests/: gajae_profile_install_stdin.rs  runtime_config.rs
